--- a/_config.yml
+++ b/_config.yml
@@ -156,7 +156,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/soooyeon22"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
