--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Github blog # the main title
+title: Github soooyeon22 blog # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
